@@ -1,3 +1,9 @@
+2017-5-19
+	-Added new skills: Regal Blade
+
+2017-5-15
+	-Added new skills: Ragnarok, Earth Boost, Distant Def, Wrathful Staff
+
 2017-5-7
 	-Added absorb staff back in. When did I even delete that code?
 	-Fixed healing specials healing for more than the enemy's remaining HP
